added changes in file extension

--- a/.github/workflows/ci_cd_pipeline.yaml
+++ b/.github/workflows/ci_cd_pipeline.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   call-pipeline:
-    uses: Moon-Insurance/main-service/.github/workflows/ci_c_pipeline.yml@main
+    uses: Moon-Insurance/main-service/.github/workflows/ci_c_pipeline.yaml@main
     with:
       service_name: "product-service"
       aggregator_service: false # Aggregator service flag
