--- a/.github/workflows/ci_cd_pipeline.yaml
+++ b/.github/workflows/ci_cd_pipeline.yaml
@@ -14,7 +14,7 @@ jobs:
       service_name: "product-service" # Service name
       aggregator_service: false # Aggregator service flag
     secrets:
-      GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+      GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }} # GCP service account key
       GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
       GKE_CLUSTER_NAME: ${{ secrets.GKE_CLUSTER_NAME }}
       GKE_REGION: ${{ secrets.GKE_REGION }}
