testing product service deployment

--- a/.github/workflows/ci_cd_pipeline.yaml
+++ b/.github/workflows/ci_cd_pipeline.yaml
@@ -22,3 +22,4 @@ jobs:
       DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
       DATABASE_ENDPOINT: ${{ secrets.DATABASE_ENDPOINT }}
       DATABASE_NAME: ${{ secrets.DATABASE_NAME }}
+## testing
