--- a/k8s/migration-job.yaml
+++ b/k8s/migration-job.yaml
@@ -7,7 +7,7 @@ spec:
     spec:
       containers:
         - name: migrate-db
-          image: GCP_REGION-docker.pkg.dev/GCP_PROJECT_ID/moon-insurance/product-service:latest
+          image: us-central1-docker.pkg.dev/moon-insurance/moon-insurance/product-service:latest
           command: ["/bin/sh", "-c"]
           args:
             - flask db current || flask db upgrade
@@ -17,16 +17,4 @@ spec:
                 secretKeyRef:
                   name: product-service-db-secret
                   key: DATABASE_URL
-
-            - name: GCP_PROJECT_ID
-              valueFrom:
-                secretKeyRef:
-                  name: gcp-secret
-                  key: GCP_PROJECT_ID
-
-            - name: GCP_REGION
-              valueFrom:
-                secretKeyRef:
-                  name: gcp-secret
-                  key: GCP_REGION
       restartPolicy: Never
