--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # Example environment file for Agent Service
-DATABASE_URI=postgresql://microservices_pdt_admin:pdt_admin@postgres-host:5432/product_d
+DATABASE_URL=postgresql://postgres:Moon#233@34.171.212.123:5432/moon_nsurance_db
