product service changes added

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # Example environment file for Agent Service
-DATABASE_URL=postgresql://postgres:Moon#233@34.171.212.123:5432/moon_nsurance_db
+DATABASE_URL=postgresql://microservices_ntn_admin:ntn_admin@postgres-host:5432/notification_db
